[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/inv/container.png" type="Texture" id=1]
[ext_resource path="res://Icons/icons.png" type="Texture" id=2]
[ext_resource path="res://Icons/Icon.gd" type="Script" id=3]
[ext_resource path="res://UI/Font/MinimalPixel v2.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 4 )

[node name="button" type="TextureButton" groups=["icons"]]
margin_right = 96.0
margin_bottom = 96.0
keep_pressed_outside = true
texture_normal = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 48, 48 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 16
vframes = 28
frame = 5

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.9347
margin_top = 48.1294
margin_right = 13.0653
margin_bottom = 76.1294
mouse_filter = 1
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
text = "1
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="." to="." method="_on_button_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_button_up"]
[connection signal="pressed" from="." to="." method="_on_button_pressed"]
